--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-	"name": "ecommerce",
-	"version": "1.0.0",
-	"description": "ecommerce project",
-	"type": "module",
-	"main": "index.js",
-	"scripts": {
-		"dev": "nodemon ./src/index.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"dotenv": "^16.3.1",
-		"envalid": "^8.0.0",
-		"express": "^4.18.2",
-		"mysql2": "^3.6.3"
-	},
-	"devDependencies": {
-		"nodemon": "^3.0.1"
-	}
+    "name": "ecommerce",
+    "version": "1.0.0",
+    "description": "ecommerce project",
+    "type": "module",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon ./src/index.js"
+    },
+    "keywords": [],
+    "author": "Jamshid",
+    "license": "ISC",
+    "dependencies": {
+        "dotenv": "^16.3.1",
+        "envalid": "^8.0.0",
+        "express": "^4.18.2",
+        "mysql2": "^3.6.3"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1"
+    }
 }
