--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "type": "module",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon ./src/index.js"
+        "dev": "nodemon ./src/index.js",
+        "build": "npx tsc"
     },
     "keywords": [],
     "author": "Jamshid",
@@ -14,9 +15,15 @@
         "dotenv": "^16.3.1",
         "envalid": "^8.0.0",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.6.3"
     },
     "devDependencies": {
-        "nodemon": "^3.0.1"
+        "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.5",
+        "@types/node": "^20.9.0",
+        "nodemon": "^3.0.1",
+        "typescript": "^5.2.2"
     }
 }
